--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,9 @@
     max-width: 1172px;
     height: 317px;
     margin: 0 auto;
+    padding: 10px;
 }
-h1{
+.container__title{
     width: 392px;
     height: 83px;
     font-family: Rozha One;
@@ -27,7 +28,7 @@ form{
     display: -ms-flexbox;
     display: flex;
 }
-.block-570{
+.form__grid{
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -38,14 +39,14 @@ form{
     max-width: 570px;
     width: 50%;
 }
-.row{
+.form-grid__row{
     display: block;
     width: 100%;
     height: 50px;
 }
 input[type=text]{
     font-family: 'Josefin Sans', sans-serif;
-    font-size: 16px;
+    font-size: 18px;
     line-height: 19px;
     color: #999999;
     border: none;
@@ -62,7 +63,7 @@ input[type="text"]:focus {
 }
 .project-description label, p{
     font-family: 'Josefin Sans', sans-serif;
-    font-size: 16px;
+    font-size: 18px;
     line-height: 19px;
     color: #999999;
     margin: 0 0 5px 0;
@@ -70,9 +71,10 @@ input[type="text"]:focus {
 .project-description textarea{
     width: 100%;
     height: 102px;
+    resize: none;
 }
 
-.checkbox-button{
+.description__grid{
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -82,10 +84,10 @@ input[type="text"]:focus {
     padding-top: 20px;
 }
 input[type="checkbox"]{
-    width: 16px;
-    margin: 0 14px 0 2px;
+    width: 28px;
+    margin: 0 12px 0 2px;
 }
-.checkbox-block{
+.description-grid__checkbox{
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -103,8 +105,34 @@ input[type="checkbox"]{
     border-radius: 30px;
     border: none;
 }
+.validateBtn:hover{
+    background-color: #ceee6f;
+}
 
  /* верстка заняла примерно 3 часа  */
+
+ @media screen and (max-width: 920px){
+    .container{
+       height: 100%;
+    }
+   .description__grid{
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+       padding-top: 5px;
+   }
+   .description-grid__checkbox{
+       width: 95%;
+   }
+   .validateBtn{
+       width: 100%;
+       color: #999999;
+       padding: 12px 42px 13px;
+       height: 41px;
+       border: 1px solid #E5E5E5;
+   }
+}
 
  @media screen and (max-width: 480px){
      .container{
@@ -116,14 +144,14 @@ input[type="checkbox"]{
         -ms-flex-direction: column;
         flex-direction: column;
      }
-     h1{
+     .container__title{
         width: 42%;
         height: 51px;
         font-size: 36px;
         line-height: 51px;
         margin-bottom: 15px;
      }
-     .block-570{
+     .form__grid{
         width: 100%;
      }
      
@@ -133,14 +161,14 @@ input[type="checkbox"]{
     .project-description textarea{
         height: 195px;
     }
-    .checkbox-button{
+    .description__grid{
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
         -ms-flex-direction: column;
         flex-direction: column;
         padding-top: 5px;
     }
-    .checkbox-block{
+    .description-grid__checkbox{
         width: 95%;
     }
     .validateBtn{
@@ -154,26 +182,3 @@ input[type="checkbox"]{
     }
  }
 
- @media screen and (max-width: 920px){
-    .container{
-       height: 100%;
-    }
-   .checkbox-button{
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-       padding-top: 5px;
-   }
-   .checkbox-block{
-       width: 95%;
-   }
-   .validateBtn{
-       width: 100%;
-       color: #999999;
-       padding: 12px 42px 13px;
-       height: 41px;
-       background: #fff;
-       border: 1px solid #E5E5E5;
-   }
-}
